[package]
name = "step_up"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["blocking", "cookies", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.0"
serde_json = { version = "1.0", features = ["std"] }
bytes = "1"
flate2 = "1.0"
chrono = "0.4"
log = "0.4"
env_logger="0.9"
rand="0.8"


[dev-dependencies]
tokio-test = "0.4"